--- a/index.ipynb
+++ b/index.ipynb
@@ -78,11 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "greenville_population = greenville['Po'] # change None\n",
+    "greenville_population = greenville['Population'] # change None\n",
     "greenville_population # 93"
    ]
   },
@@ -99,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = None\n",
+    "greenville_area = greenville['']\n",
     "greenville_area # 68"
    ]
   },
