Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,11 +305,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Greenville', 'Country': 'USA', 'Population': 93, 'Area': 68}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = \n",
+    "los_cabos_pop = cities[5]\n",
     "los_cabos_pop # 288"
    ]
   },
