Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,22 +305,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Greenville', 'Country': 'USA', 'Population': 93, 'Area': 68}"
+       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 288, 'Area': 3751}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = cities[5]\n",
+    "los_cabos_pop = cities[4]\n",
     "los_cabos_pop # 288"
    ]
   },
@@ -339,7 +339,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = len()\n",
     "city_count # 12"
    ]
   },
