--- a/index.ipynb
+++ b/index.ipynb
@@ -333,13 +333,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_count = len()\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
@@ -356,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = None\n",
+    "cities[7]['City'] = 'Pyeong'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
