--- a/index.ipynb
+++ b/index.ipynb
@@ -363,11 +363,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PyeongChange'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cities[7]['City'] = 'Pyeong'\n",
+    "cities[7]['City'] = 'PyeongChange'\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
