--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_values = None\n",
+    "pyeongchang_values = cities\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
